--- a/style.css
+++ b/style.css
@@ -10,19 +10,22 @@ body{
     background: rgba(0, 0, 0, 0.267);
 }
 h1 {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 5px;
+    
+}
+h1 , h2{
+    margin-bottom: 10px;
 }
 .btn-container{
     /* display: grid;
     grid-template-columns: auto auto; */
     display:flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
 }
 .btn{
-    width: 200px;
-    height: 200px;
+    width: 180px;
+    height: 180px;
     border-radius: 20%;
     border: 10px solid black;
     margin: 3rem;
